NetBSD Problem Report #19175

Received: (qmail 22638 invoked by uid 605); 26 Nov 2002 13:07:06 -0000
Message-Id: <20021126130704.BAEBA11124@narn.netbsd.org>
Date: Tue, 26 Nov 2002 05:07:04 -0800 (PST)
From: pch@polo.po.opole.pl
Sender: gnats-bugs-owner@netbsd.org
Reply-To: pch@polo.po.opole.pl
To: gnats-bugs@gnats.netbsd.org
Subject: Merlin 4MB detected as 2MB version
X-Send-Pr-Version: www-1.0

>Number:         19175
>Category:       port-amiga
>Synopsis:       Merlin 4MB detected as 2MB version
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    is
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Nov 26 13:08:00 +0000 2002
>Closed-Date:    Fri Apr 18 11:51:11 +0000 2003
>Last-Modified:  Mon Jun 16 13:53:07 +0000 2003
>Originator:     Pawel Chwalowski
>Release:        NetBSD 1.6
>Organization:
>Environment:
NetBSD zbytniczka 1.6 NetBSD 1.6 (GENERIC) #0: Sun Sep  8 09:50:48 UTC 2002     autobuild@tgm.daemon.org:/autobuild/amiga/OBJ/autobuild/src/sys/arch/amiga/compile/GENERIC amiga

>Description:
My Merlin 4MB gfx board is detected as 2MB version.

Dmesg output:
NetBSD 1.6 (GENERIC) #0: Sun Sep  8 09:50:48 UTC 2002
    autobuild@tgm.daemon.org:/autobuild/amiga/OBJ/autobuild/src/sys/arch/amiga/compile/GENERIC
Amiga 4000 (m68040 CPU/MMU/FPU)
total memory = 16384 KB
avail memory = 11696 KB
using 115 buffers containing 920 KB of memory
memory segment 0 at 07000000 size 01000000
memory segment 1 at 00000000 size 00200000
mainbus0 (root)
clock0 at mainbus0: CIA B system hz 100 hardware hz 709379
Calibrating delay loop... 94/1024 us
a34kbbc0 at mainbus0
ser0 at mainbus0: input fifo 512 output fifo 32
par0 at mainbus0
kbd0 at mainbus0: CIA A type Amiga
ms0 at mainbus0
grfcc0 at mainbus0
grf0 at grfcc0: width 640 height 400 colors 4
ite0 at grf0: rows 0 cols 0 repeat at (30/100)s next at (10/100)s has keyboard
fdc0 at mainbus0: dmabuf pa 0x1deed8: dmabuf ka 0x8998ed8
fd0 at fdc0 unit 0: 3.5dd 80 cyl, 2 head, 11 sec [9 sec], 512 bytes/sec
wdc0 at mainbus0
atapibus0 at wdc0 channel 0: 2 targets
cd0 at atapibus0 drive 1: <XF00D1 E, , G07> type 5 cdrom removable
cd0: drive supports PIO mode 3
aftsc0 at mainbus0
aftsc0: siop id 7 reset V2
scsibus0 at aftsc0: 8 targets, 8 luns per target
aucc0 at mainbus0
audio0 at aucc0: half duplex
zbus0 at mainbus0: i/o size 0x00400000
grfet0 at zbus0 pa 0xe90000 man/pro 2117/4
grf6 at grfet0: width 640 height 480 colors 16
ite6 at grf6: rows 60 cols 80 repeat at (30/100)s next at (10/100)s has keyboard
grfet: 2MB Merlin with Tseng ETW32 and BrookTree Bt482 DAC being used
grfet1 at zbus0 pa 0x40000000 man/pro 2117/3
ite at grfet1:  not configured


But it is 4MB for sure.
For example this is ShowConfig (AmigaOS) output:
PROCESSOR:	CPU 68040/68040fpu
CUSTOM CHIPS:	AA PAL Alice (id=$0023), AA Lisa (id=$00F8)
VERS:	Kickstart version 40.70, Exec version 40.10, Disk version 40.42
RAM:	Node type $A, Attributes $505 (FAST), at $7000000-$7FFFFFF (16.0 meg)
	Node type $A, Attributes $703 (CHIP), at $1000-$1FFFFF (~2.0 meg)
BOARDS:
 Board (unidentified):   Prod=2117/4($845/$4) (@$E90000 64K)
 Board (unidentified):   Prod=2117/3($845/$3)
     (@$40000000, size 4meg, subsize 4meg)

>How-To-Repeat:

>Fix:

>Release-Note:
>Audit-Trail:

From: is@beverly.kleinbus.org
To: pch@polo.po.opole.pl
Cc: gnats-bugs@gnats.netbsd.org
Subject: Re: port-amiga/19175: Merlin 4MB detected as 2MB version
Date: Tue, 26 Nov 2002 23:16:27 +0100

 Hi,

 On Tue, Nov 26, 2002 at 05:07:04AM -0800, pch@polo.po.opole.pl wrote:
 > 
 > zbus0 at mainbus0: i/o size 0x00400000
 > grfet0 at zbus0 pa 0xe90000 man/pro 2117/4
 > grf6 at grfet0: width 640 height 480 colors 16
 > ite6 at grf6: rows 60 cols 80 repeat at (30/100)s next at (10/100)s has keyboard
 > grfet: 2MB Merlin with Tseng ETW32 and BrookTree Bt482 DAC being used
 > grfet1 at zbus0 pa 0x40000000 man/pro 2117/3
 > ite at grfet1:  not configured
 > 
 > 
 > But it is 4MB for sure.

 Are you *sure*? Because what you cite here:

 > For example this is ShowConfig (AmigaOS) output:

 >  Board (unidentified):   Prod=2117/4($845/$4) (@$E90000 64K)
 >  Board (unidentified):   Prod=2117/3($845/$3)
 >      (@$40000000, size 4meg, subsize 4meg)

 doesn't count ... thats the address space the board wants reserved for it.
 It might well have less video RAM in that space.

 The driver contains code by the late Klaus Burkert to actually probe the
 card hardware for the memory available...

 Regards,
 	-is

State-Changed-From-To: open->feedback 
State-Changed-By: is 
State-Changed-When: Sun Mar 9 07:33:26 PST 2003 
State-Changed-Why:  
As already mentioned: are you really sure your card is a 4 MB 
one? (citing showconfig output doesn't count, as showconfig 
only shows the address space occupied by the card, not how 
much of it is really  video RAM). 

The driver contains code by the late Klaus Burkert to do  
RAM detection. 

... so it should work... 

From: "Perry E. Metzger" <perry@piermont.com>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: Re: port-amiga/19175
Date: 09 Apr 2003 12:15:52 -0400

 [Forwarded by Perry]
 From: Pawel Chwalowski <pch@polo.po.opole.pl>
 To: gnats-admin@netbsd.org
 Subject: Re: port-amiga/19175: Merlin 4MB detected as 2MB version

 Hello!

 I received reminder from GNATS. Now I have more careful bugreport.

 This is the forwarded mesage from ing Karl-Werner Riedel (designer of the
 Merlin):

 ----- Forwarded message from Karlriedel@aol.com -----
 <... cut ...>

 Hi Pawel,
 there are two kinds of 2MB-Modules for the Merlin. 2MB 16 Bit and 2 MB 32
 Bit.
 the 32Bit version is labeled "2MB 32 Bit". The 16Bit only "2MB". Two of
 the 16 Bit make the 4 MB - Merlin. Or only one - and realy only one - of
 the 32 Bit is for the 2MB - Merlin.
 Other combinations not possible. Amiga tools only show the memoryspace.
 It's always the same for all kinds of Merlin, but different in a Zorro 3
 machine. HRCardinfo should show the real size.

 <...cut...>

 ----- End forwarded message -----


 My Merlin own two simm modules labeled "2MB"

 HRVardinfo output:
 roDev HRG-System Hardware Info
 -------------------------------

 AutoCfgMem: Okay
 AutoCfgIO : Okay

 GfxBoard  : Merlin V1 (HRG-ID: 2)
 Serial Key: 2141
 Bus Mode  : Zorro 3
 Register  : $E90000
 Video Mem : $40000000
 Memorysize: 4 MB
 RAMDAC-ID : 2
 BitsPerGun: 24 Bit
 AktFrame  : 0
 Features  : MonitorSwitch Blitter PIP ImagePort HW-Sprite VBlank-IRQ
 Module    : < none >
 MoniMode  : Single

 Supported Color Depths:
  Mixed BitMaps  4 Bit
  Packed Pixel   8 Bit
  TARGA HiColor 15 Bit
  XGA HiColor   16 Bit
  TrueColor RGB 24 Bit

 Supported Clock-Frequencies:
  50.350 MHz  56.644 MHz  65.000 MHz  72.000 MHz
  80.000 MHz  89.800 MHz  63.000 MHz  75.000 MHz
  83.078 MHz  93.463 MHz 100.000 MHz 104.000 MHz
 108.000 MHz 120.000 MHz 130.000 MHz 134.700 MHz



 I takes closer look at grf_et.c
 /sys/arch/amiga/dev/grf_et.c

 In my opinion the problem is in this lines:

 /* ZorroII can map 2 MB max ... */
 if (!iszthreepa(gp->g_fbkva) && et_fbsize == 0x400000)
         et_fbsize = 0x200000;

 When I change 2nd line to "et_fbsize = 0x400000" and recompile kernel it
 recognize full 4MB. Is it detects my ZIII as ZII? I have an Amiga 4000T
 with ZorroIII (it is ZIII for *sure* :)).


 Regards,
 PCh
Responsible-Changed-From-To: port-amiga-maintainer->is 
Responsible-Changed-By: perry 
Responsible-Changed-When: Wed Apr 9 09:16:32 PDT 2003 
Responsible-Changed-Why:  
Ignatios is the Amiga portmaster 

From: Ignatios Souvatzis <is@beverly.kleinbus.org>
To: Pawel Chwalowski <pch@polo.po.opole.pl>
Cc: gnats-bugs@netbsd.org
Subject: Re: port-amiga/19175: Merlin 4MB detected as 2MB version
Date: Sun, 13 Apr 2003 22:09:50 +0200

 You wrote:

 >  In my opinion the problem is in this lines:
 >  /* ZorroII can map 2 MB max ... */
 >  if (!iszthreepa(gp->g_fbkva) && et_fbsize == 0x400000)
 >	  et_fbsize = 0x200000;

 I looked at the code a bit closer - and I seem to smell the problem area.
 [combination of Amiga's double-configuration system for potential console
 devices with the grf$FOO devices' use of static variables for lots of stuff]

 You seem to be able to change code and run your own test kernels.

 Would you please add this line

     printf("grfet: fbkva is %p, fbsize was 0x%lx \n", gp->g_fbkva, et_fbsize);

 right before those lines, recompile the kernel, and send the relevant 
 output?

 Regards,
 	-is

From: Pawel Chwalowski <pch@polo.po.opole.pl>
To: is@beverly.kleinbus.org
Cc: gnats-bugs@netbsd.org
Subject: Re: port-amiga/19175: Merlin 4MB detected as 2MB version
Date: Wed, 16 Apr 2003 07:43:54 +0200

 On Sun, Apr 13, 2003 at 10:09:50PM +0200 or thereabouts, Ignatios Souvatzis wrote:

 > You seem to be able to change code and run your own test kernels.
 > 
 > Would you please add this line
 > 
 >     printf("grfet: fbkva is %p, fbsize was 0x%lx \n", gp->g_fbkva, et_fbsize);
 > 
 > right before those lines, recompile the kernel, and send the relevant 
 > output?


 Hello!

 I added this line, and... 
 cc1: warnings being treated as errors
 /sys/arch/amiga/compile/ZBYTNICZKA/../../../../arch/amiga/dev/grf_et.c: In 
 function `et_boardinit':
 /sys/arch/amiga/compile/ZBYTNICZKA/../../../../arch/amiga/dev/grf_et.c:541: 
 warning: long unsigned int format, unsigned int arg (arg 3)

 I changed "0x%lx" to "0x%x". But when I reboot with new kernel I 
 didn`t found any additional line:
 NetBSD 1.6 (ZBYTNICZKA) #10: Mon Apr 14 23:04:34 CEST 2003
     root@zbytniczka:/usr/src/sys/arch/amiga/compile/ZBYTNICZKA
 Amiga 4000 (m68040 CPU/MMU/FPU)
 total memory = 12288 KB
 avail memory = 8648 KB
 using 89 buffers containing 712 KB of memory
 memory segment 0 at 07000000 size 01000000
 memory segment 1 at 00000000 size 00200000
 mainbus0 (root)
 clock0 at mainbus0: CIA B system hz 100 hardware hz 709379
 Calibrating delay loop... 94/1024 us
 a34kbbc0 at mainbus0
 ser0 at mainbus0: input fifo 512 output fifo 32
 par0 at mainbus0
 kbd0 at mainbus0: CIA A type Amiga
 ms0 at mainbus0
 fdc0 at mainbus0: dmabuf pa 0x1f7fd8: dmabuf ka 0x89b1fd8
 fd0 at fdc0 unit 0: 3.5dd 80 cyl, 2 head, 11 sec [9 sec], 512 bytes/sec
 wdc0 at mainbus0
 atapibus0 at wdc0 channel 0: 2 targets
 cd0 at atapibus0 drive 1: <XF00D1 E, , G07> type 5 cdrom removable
 cd0: drive supports PIO mode 3
 wd0 at wdc0 channel 0 drive 0: <ST38422A>
 wd0: drive supports 16-sector PIO transfers, LBA addressing
 wd0: 8223 MB, 16383 cyl, 16 head, 63 sec, 512 bytes/sect x 16841664 
 sectors
 wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 4 (Ultra/66)
 aftsc0 at mainbus0
 aftsc0: siop id 7 reset V2
 scsibus0 at aftsc0: 8 targets, 8 luns per target
 aucc0 at mainbus0
 audio0 at aucc0: half duplex
 zbus0 at mainbus0: i/o size 0x00400000
 grfet0 at zbus0 pa 0xe90000 man/pro 2117/4
 grf6 at grfet0: width 640 height 480 colors 16
 ite6 at grf6: rows 60 cols 80 repeat at (30/100)s next at (10/100)s has 
 keyboard
 grfet: 2MB Merlin with Tseng ETW32 and BrookTree Bt482 DAC being used
 grfet1 at zbus0 pa 0x40000000 man/pro 2117/3
 ite at grfet1:  not configured
 Tandem at zbus0: pa 0xea0000 man/pro 2092/6 not configured
 scsibus0: waiting 2 seconds for devices to settle...
 aftsc0: target 1 now synchronous, period=100ns, offset=8
 sd0 at scsibus0 target 1 lun 0: <SEAGATE, ST15150N, 0020> SCSI2 0/direct 
 fixed
 sd0: 4095 MB, 3712 cyl, 21 head, 107 sec, 512 bytes/sect x 8388315 sectors
 aftsc0: target 2 (sync) 04 ff 01
 cd1 at scsibus0 target 2 lun 0: <IMS, CDD2000/00, 1.26> SCSI2 5/cdrom 
 removable
 4 views configured
 Kernelized RAIDframe activated
 warning unknown dostype: 0x53575000 marking unused
 warning unknown dostype: 0x53465300 marking unused
 warning unknown dostype: 0x53465300 marking unused
 root on sd0a dumps on sd0b
 root file system type: ffs


 So, I changed grf_et.c a little bit more:

 --- grf_et.c	Wed Aug  7 01:29:19 2002
 +++ grf_et.c_MY	Tue Apr 15 20:56:31 2003
 @@ -167,6 +167,9 @@
  static void *et_regaddr = 0;	/* registers */
  static int et_fbsize;		/* framebuffer size */

 +volatile unsigned long *fbkva_check;
 +unsigned int et_fbsize_check;		/* MY OWN */
 +
  /* current sprite info, if you add support for multiple boards
   * make this an array or something
   */
 @@ -318,6 +321,10 @@
  	 */
  	if (amiga_config_found(cfdata, &gp->g_device, gp, grfetprint)) {
  		attachflag = 1;
 +		
 +	printf("LOOK HERE:\n");
 +	printf("grfet: fbkva is %p, fbsize was: %x\n", fbkva_check, 
 et_fbsize_check);
 +	
  		printf("grfet: %dMB ", et_fbsize / 0x100000);
  		switch (ettype) {
  		    case OMNIBUS:
 @@ -538,6 +545,11 @@
  			else
  				et_fbsize = 0x100000;		/* 1 MB */
  		}
 +
 +fbkva_check = (volatile unsigned long *)gp->g_fbkva;
 +et_fbsize_check = et_fbsize;
 +printf("grfet: fbkva is %p, fbsize was 0x%x \n", gp->g_fbkva, et_fbsize);
 +
  		/* ZorroII can map 2 MB max ... */
  		if (!iszthreepa(gp->g_fbkva) && et_fbsize == 0x400000)
  			et_fbsize = 0x200000;


 And when I reboot with new kernel:

 NetBSD 1.6 (ZBYTNICZKA) #15: Tue Apr 15 22:58:30 CEST 2003
     root@zbytniczka:/usr/src/sys/arch/amiga/compile/ZBYTNICZKA
 Amiga 4000 (m68040 CPU/MMU/FPU)
 total memory = 12288 KB
 avail memory = 8648 KB
 using 89 buffers containing 712 KB of memory
 memory segment 0 at 07000000 size 01000000
 memory segment 1 at 00000000 size 00200000
 mainbus0 (root)
 clock0 at mainbus0: CIA B system hz 100 hardware hz 709379
 Calibrating delay loop... 94/1024 us
 a34kbbc0 at mainbus0
 ser0 at mainbus0: input fifo 512 output fifo 32
 par0 at mainbus0
 kbd0 at mainbus0: CIA A type Amiga
 ms0 at mainbus0
 fdc0 at mainbus0: dmabuf pa 0x1f7fd8: dmabuf ka 0x89b1fd8
 fd0 at fdc0 unit 0: 3.5dd 80 cyl, 2 head, 11 sec [9 sec], 512 bytes/sec
 wdc0 at mainbus0
 atapibus0 at wdc0 channel 0: 2 targets
 cd0 at atapibus0 drive 1: <XF00D1 E, , G07> type 5 cdrom removable
 cd0: drive supports PIO mode 3
 wd0 at wdc0 channel 0 drive 0: <ST38422A>
 wd0: drive supports 16-sector PIO transfers, LBA addressing
 wd0: 8223 MB, 16383 cyl, 16 head, 63 sec, 512 bytes/sect x 16841664 
 sectors
 wd0: drive supports PIO mode 4, DMA mode 2, Ultra-DMA mode 4 (Ultra/66)
 aftsc0 at mainbus0
 aftsc0: siop id 7 reset V2
 scsibus0 at aftsc0: 8 targets, 8 luns per target
 aucc0 at mainbus0
 audio0 at aucc0: half duplex
 zbus0 at mainbus0: i/o size 0x00400000
 grfet0 at zbus0 pa 0xe90000 man/pro 2117/4
 grf6 at grfet0: width 640 height 480 colors 16
 ite6 at grf6: rows 60 cols 80 repeat at (30/100)s next at (10/100)s has 
 keyboard
 LOOK HERE:
 grfet: fbkva is 0x8bbe000, fbsize was: 400000
 grfet: 2MB Merlin with Tseng ETW32 and BrookTree Bt482 DAC being used
 grfet1 at zbus0 pa 0x40000000 man/pro 2117/3
 ite at grfet1:  not configured
 Tandem at zbus0: pa 0xea0000 man/pro 2092/6 not configured
 scsibus0: waiting 2 seconds for devices to settle...
 aftsc0: target 1 now synchronous, period=100ns, offset=8
 sd0 at scsibus0 target 1 lun 0: <SEAGATE, ST15150N, 0020> SCSI2 0/direct 
 fixed
 sd0: 4095 MB, 3712 cyl, 21 head, 107 sec, 512 bytes/sect x 8388315 sectors
 aftsc0: target 2 (sync) 04 ff 01
 cd1 at scsibus0 target 2 lun 0: <IMS, CDD2000/00, 1.26> SCSI2 5/cdrom 
 removable
 4 views configured
 Kernelized RAIDframe activated
 warning unknown dostype: 0x53575000 marking unused
 warning unknown dostype: 0x53465300 marking unused
 warning unknown dostype: 0x53465300 marking unused
 root on sd0a dumps on sd0b
 root file system type: ffs


 I hope this help a bit.

 Regards,
 Pawel Chwalowski

 -- 
        .-=-.    .-=-.   Pawe³ Chwa³owski (Rammy/#AmigaPL)
       (~(o)~)  (~(o)~)  A4000T/040/16MB/Merlin4MB/CTX-VL500/BJC-250
    jgs '-=-'    '-=-'   GG:  262928    http://polo.po.opole.pl/~pch/
                         ICQ: 109823766 http://amiga.to.jest.to/

From: Ignatios Souvatzis <is@netbsd.org>
To: Pawel Chwalowski <pch@polo.po.opole.pl>
Cc: gnats-bugs@netbsd.org
Subject: Re: port-amiga/19175: Merlin 4MB detected as 2MB version
Date: Wed, 16 Apr 2003 21:31:15 +0200

 hi,

 It was there right before our eyes...

 On Wed, Apr 16, 2003 at 07:43:54AM +0200, Pawel Chwalowski wrote:

 > LOOK HERE:
 > grfet: fbkva is 0x8bbe000, fbsize was: 400000

 right... thats a kernel virtual address...

 >  		/* ZorroII can map 2 MB max ... */
 >  		if (!iszthreepa(gp->g_fbkva) && et_fbsize == 0x400000)
 >  			et_fbsize = 0x200000;

 Now guess what iszthreepa() checks. 

 Pawel, do this change (to the original grf_et.c):

 Index: grf_et.c
 ===================================================================
 RCS file: /cvsroot/src/sys/arch/amiga/dev/grf_et.c,v
 retrieving revision 1.19
 diff -u -r1.19 grf_et.c
 --- grf_et.c	2003/01/01 00:28:58	1.19
 +++ grf_et.c	2003/04/16 19:23:04
 @@ -538,7 +538,7 @@
  				et_fbsize = 0x100000;		/* 1 MB */
  		}
  		/* ZorroII can map 2 MB max ... */
 -		if (!iszthreepa(gp->g_fbkva) && et_fbsize == 0x400000)
 +		if (!iszthreepa(kvtop(gp->g_fbkva)) && et_fbsize == 0x400000)
  			et_fbsize = 0x200000;
  		etctype = ETW32;
  		etdtype = MERLINDAC;

 and you should be fine. Please report.

 Regards,
 	Ignatios
State-Changed-From-To: feedback->analyzed 
State-Changed-By: is 
State-Changed-When: Thu Apr 17 21:36:31 UTC 2003 
State-Changed-Why:  
The driver applied iszthreepa() to a kernel virtual address. 
State-Changed-From-To: analyzed->feedback 
State-Changed-By: is 
State-Changed-When: Thu Apr 17 21:37:41 UTC 2003 
State-Changed-Why:  
Please report whether wrapping the iszthreepa() argument in a kvtop()  
fixes your problem. 

From: Pawel Chwalowski <pch@polo.po.opole.pl>
To: is@netbsd.org
Cc: gnats-bugs@netbsd.org
Subject: Re: port-amiga/19175: Merlin 4MB detected as 2MB version
Date: Fri, 18 Apr 2003 07:40:27 +0200

 On Wed, Apr 16, 2003 at 09:31:15PM +0200 or thereabouts, Ignatios Souvatzis wrote:

 > Pawel, do this change (to the original grf_et.c):

 [...]

 > and you should be fine. Please report.


 Hello!

 Now it works fine.

 ...
 grfet0 at zbus0 pa 0xe90000 man/pro 2117/4
 grf6 at grfet0: width 640 height 480 colors 16
 ite6 at grf6: rows 60 cols 80 repeat at (30/100)s next at (10/100)s has 
 keyboard
 grfet: 4MB Merlin with Tseng ETW32 and BrookTree Bt482 DAC being used
 grfet1 at zbus0 pa 0x40000000 man/pro 2117/3
 ite at grfet1:  not configured
 ...


 Thank you.

 Regards,
 Pawel Chwalowski


 -- 
        .-=-.    .-=-.   Pawe³ Chwa³owski (Rammy/#AmigaPL)
       (~(o)~)  (~(o)~)  A4000T/040/16MB/Merlin4MB/CTX-VL500/BJC-250
    jgs '-=-'    '-=-'   GG:  262928    http://polo.po.opole.pl/~pch/
                         ICQ: 109823766 http://amiga.to.jest.to/

From: Ignatios Souvatzis <is@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: pr/19175 CVS commit: src/sys/arch/amiga/dev
Date: Fri, 18 Apr 2003 09:18:21 +0000 (UTC)

 Module Name:	src
 Committed By:	is
 Date:		Fri Apr 18 09:18:20 UTC 2003

 Modified Files:
 	src/sys/arch/amiga/dev: grf_et.c

 Log Message:
 iszthreepa() takes a physical address, not a virtual address.
 This fixes PR 19175, reported and heavily debugged by Pawel Chwalowski.


 To generate a diff of this commit:
 cvs rdiff -r1.19 -r1.20 src/sys/arch/amiga/dev/grf_et.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed 
State-Changed-By: is 
State-Changed-When: Fri Apr 18 11:49:53 UTC 2003 
State-Changed-Why:  
Fixed in -current, pullup requested. 

From: SAITOH Masanobu <msaitoh@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: pr/19175 CVS commit: [netbsd-1-5] src/sys/arch/amiga/dev
Date: Tue, 27 May 2003 03:57:37 +0000 (UTC)

 Module Name:	src
 Committed By:	msaitoh
 Date:		Tue May 27 03:57:36 UTC 2003

 Modified Files:
 	src/sys/arch/amiga/dev [netbsd-1-5]: grf_et.c

 Log Message:
 Pullup rev. 1.20-1.21 (requested by Ignatios in ticket #42)
  iszthreepa() takes a physical address, not a virtual address.
  Fixes PR#19175


 To generate a diff of this commit:
 cvs rdiff -r1.12 -r1.12.18.1 src/sys/arch/amiga/dev/grf_et.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.


From: SAITOH Masanobu <msaitoh@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: pr/19175 CVS commit: [netbsd-1-5] src
Date: Tue, 27 May 2003 05:56:42 +0000 (UTC)

 Module Name:	src
 Committed By:	msaitoh
 Date:		Tue May 27 05:56:42 UTC 2003

 Modified Files:
 	src [netbsd-1-5]: CHANGES-1.5.4

 Log Message:
 ticket #42,#43,#45

 o grf_et.c: fix to recognize RAM size correctly. PR#19175
 o wsemul_vt100: fix for DECRQUPSS escape sequence and PR#17738, PR#21230
 o netiso/clnp_er.c: fix panic in the interface output routine


 To generate a diff of this commit:
 cvs rdiff -r1.1.2.102 -r1.1.2.103 src/CHANGES-1.5.4

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.


From: grant beattie <grant@netbsd.org>
To: gnats-bugs@gnats.netbsd.org
Cc:  
Subject: pr/19175 CVS commit: [netbsd-1-6] src/sys/arch/amiga/dev
Date: Mon, 16 Jun 2003 13:51:25 +0000 (UTC)

 Module Name:	src
 Committed By:	grant
 Date:		Mon Jun 16 13:51:24 UTC 2003

 Modified Files:
 	src/sys/arch/amiga/dev [netbsd-1-6]: grf_et.c

 Log Message:
 Pull up revisions 1.20-1.21 (requested by is in ticket #1266):

 iszthreepa() takes a physical address, not a virtual address.
 This fixes PR 19175, reported and heavily debugged by Pawel
 Chwalowski.

 fix fatal typo


 To generate a diff of this commit:
 cvs rdiff -r1.15.6.1 -r1.15.6.2 src/sys/arch/amiga/dev/grf_et.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:
 Note that you also need
 cvs rdiff -r1.20 -r1.21 src/sys/arch/amiga/dev/grf_et.c

 for the fix.

 	-is

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.