Pullup rev. 1.20-1.21 (requested by Ignatios in ticket #42)  iszthreepa() takes a physical address, not a virtual address.  Fixes PR#19175